@@ -1,5 +1,6 @@
 1.2.6 - xxxxxxxxxxxxxxxxx
 =========================
+* Issue 214: Added rebuildNode method to PathChildrenCache.
 
 1.2.5 - November 27, 2012
 =========================
